--- a/composer.json
+++ b/composer.json
@@ -15,15 +15,15 @@
         }
     ],
     "require": {
-        "php": "~8.1 || ~8.2 || ~8.3",
+        "php": "~8.1 || ~8.2 || ~8.3 || ~8.4",
         "ext-soap": "*",
         "ext-bcmath": "*",
         "ext-intl": "*",
         "ext-json": "*",
         "ext-dom": "*",
         "ext-simplexml": "*",
-        "illuminate/http": "^9.0 || ^10.0 || ^11.0",
-        "illuminate/support": "^9.0 || ^10.0 || ^11.0",
+        "illuminate/http": "^9.0 || ^10.0 || ^11.0 || ^12.0|| ^13.0",
+        "illuminate/support": "^9.0 || ^10.0 || ^11.0 || ^12.0|| ^13.0",
         "phpro/soap-client": "^2.3.0 || ^3.1.0",
         "php-http/guzzle7-adapter": "^1.0",
         "php-http/discovery": "^1.14",
@@ -34,12 +34,12 @@
         "php-soap/psr18-wsse-middleware": "^2.1",
         "veewee/xml": "^2.6",
         "spatie/laravel-package-tools": "^1.14",
-        "illuminate/contracts": "^9.0 || ^10.0 || ^11.0"
+        "illuminate/contracts": "^9.0 || ^10.0 || ^11.0 || ^12.0|| ^13.0"
     },
     "require-dev": {
         "symfony/options-resolver": "^6.2.5",
         "phpunit/phpunit": "^10.0",
-        "orchestra/testbench": "^8.0 || ^9.0",
+        "orchestra/testbench": "^8.0 || ^9.0 || ^10.0|| ^11.0",
         "laminas/laminas-code": "^4.8.0",
         "nunomaduro/collision": "^6.1",
         "symplify/easy-ci": "^10.0",
