--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
         "ext-dom": "*",
         "ext-simplexml": "*",
         "illuminate/http": "^11.0 || ^12.0|| ^13.0",
-        "illuminate/support": "^^11.0 || ^12.0|| ^13.0",
+        "illuminate/support": "^11.0 || ^12.0|| ^13.0",
         "phpro/soap-client": "^2.3.0 || ^3.1.0",
         "php-http/guzzle7-adapter": "^1.0",
         "php-http/discovery": "^1.14",
